adding documentation and polishing code

--- a/UseExistingModel.ipynb
+++ b/UseExistingModel.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Using the MANN Package to convert and prune an existing TensorFlow model\n",
     "\n",
-    "In this notebook, we utilize the MANN package on an existing TensorFlow model to convert existing layers to MANN layers and then prune the model using RSN2."
+    "In this notebook, we utilize the MANN package on an existing TensorFlow model to convert existing layers to MANN layers and then prune the model."
    ]
   },
   {
@@ -26,6 +26,14 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2022-03-03 10:45:34.442895: I tensorflow/core/common_runtime/pluggable_device/pluggable_device_factory.cc:305] Could not identify NUMA node of platform GPU ID 0, defaulting to 0. Your kernel may not have been built with NUMA support.\n",
+      "2022-03-03 10:45:34.442998: I tensorflow/core/common_runtime/pluggable_device/pluggable_device_factory.cc:271] Created TensorFlow device (/job:localhost/replica:0/task:0/device:GPU:0 with 0 MB memory) -> physical PluggableDevice (device: 0, name: METAL, pci bus id: <undefined>)\n"
+     ]
+    },
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
@@ -34,14 +42,6 @@
       "systemMemory: 16.00 GB\n",
       "maxCacheSize: 5.33 GB\n",
       "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2022-03-03 08:01:16.867707: I tensorflow/core/common_runtime/pluggable_device/pluggable_device_factory.cc:305] Could not identify NUMA node of platform GPU ID 0, defaulting to 0. Your kernel may not have been built with NUMA support.\n",
-      "2022-03-03 08:01:16.867812: I tensorflow/core/common_runtime/pluggable_device/pluggable_device_factory.cc:271] Created TensorFlow device (/job:localhost/replica:0/task:0/device:GPU:0 with 0 MB memory) -> physical PluggableDevice (device: 0, name: METAL, pci bus id: <undefined>)\n"
      ]
     }
    ],
@@ -57,6 +57,15 @@
     "    weights = 'imagenet',            # Load the imagenet weights\n",
     "    input_shape = x_train.shape[1:]  # Input shape is the shape of the images\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Create the model to be trained\n",
+    "\n",
+    "In the following cell, we create the model using the existing VGG model fed into fully-connected layers."
    ]
   },
   {
@@ -110,6 +119,15 @@
     "\n",
     "# Present model summary\n",
     "model.summary()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Convert the model and perform initial pruning\n",
+    "\n",
+    "In the following cell, we convert the model and perform initial pruning of the model to 40%."
    ]
   },
   {
@@ -174,6 +192,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Train and further prune the model\n",
+    "\n",
+    "In this cell, we create the ActiveSparsification callback and train the model using that callback to prune the model as the model improves in performance."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
@@ -182,8 +209,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-03-03 08:01:18.327110: I tensorflow/compiler/mlir/mlir_graph_optimization_pass.cc:185] None of the MLIR Optimization Passes are enabled (registered 2)\n",
-      "2022-03-03 08:01:18.327285: W tensorflow/core/platform/profile_utils/cpu_utils.cc:128] Failed to get CPU frequency: 0 Hz\n"
+      "2022-03-03 10:45:35.917442: I tensorflow/compiler/mlir/mlir_graph_optimization_pass.cc:185] None of the MLIR Optimization Passes are enabled (registered 2)\n",
+      "2022-03-03 10:45:35.918470: W tensorflow/core/platform/profile_utils/cpu_utils.cc:128] Failed to get CPU frequency: 0 Hz\n"
      ]
     },
     {
@@ -197,93 +224,90 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-03-03 08:01:18.529887: I tensorflow/core/grappler/optimizers/custom_graph_optimizer_registry.cc:112] Plugin optimizer for device_type GPU is enabled.\n"
+      "2022-03-03 10:45:36.127297: I tensorflow/core/grappler/optimizers/custom_graph_optimizer_registry.cc:112] Plugin optimizer for device_type GPU is enabled.\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  6/157 [>.............................] - ETA: 48s - loss: 2.3692 - accuracy: 0.0996WARNING:tensorflow:Callback method `on_train_batch_end` is slow compared to the batch time (batch time: 0.0978s vs `on_train_batch_end` time: 0.2148s). Check your callbacks.\n",
-      "157/157 [==============================] - ETA: 0s - loss: 1.9852 - accuracy: 0.2017"
+      "  6/157 [>.............................] - ETA: 49s - loss: 2.4471 - accuracy: 0.0944WARNING:tensorflow:Callback method `on_train_batch_end` is slow compared to the batch time (batch time: 0.0993s vs `on_train_batch_end` time: 0.2171s). Check your callbacks.\n",
+      "157/157 [==============================] - ETA: 0s - loss: 1.9748 - accuracy: 0.2022"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-03-03 08:02:10.787439: I tensorflow/core/grappler/optimizers/custom_graph_optimizer_registry.cc:112] Plugin optimizer for device_type GPU is enabled.\n"
+      "2022-03-03 10:46:28.293310: I tensorflow/core/grappler/optimizers/custom_graph_optimizer_registry.cc:112] Plugin optimizer for device_type GPU is enabled.\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "157/157 [==============================] - 56s 354ms/step - loss: 1.9852 - accuracy: 0.2017 - val_loss: 1.7798 - val_accuracy: 0.2741\n",
+      "157/157 [==============================] - 56s 354ms/step - loss: 1.9748 - accuracy: 0.2022 - val_loss: 1.7803 - val_accuracy: 0.2515\n",
       "Performance measure set to val_accuracy\n",
       "Model performance has not reached pruning threshold for 1 epoch(s)\n",
       "Epoch 2/1000\n",
-      "157/157 [==============================] - 54s 346ms/step - loss: 1.7332 - accuracy: 0.2871 - val_loss: 1.8261 - val_accuracy: 0.2843\n",
+      "157/157 [==============================] - 55s 349ms/step - loss: 1.5569 - accuracy: 0.3574 - val_loss: 1.4051 - val_accuracy: 0.4592\n",
       "Model performance has not reached pruning threshold for 2 epoch(s)\n",
       "Epoch 3/1000\n",
-      "157/157 [==============================] - 54s 345ms/step - loss: 1.4679 - accuracy: 0.4106 - val_loss: 1.4511 - val_accuracy: 0.4686\n",
+      "157/157 [==============================] - 55s 348ms/step - loss: 1.1886 - accuracy: 0.5540 - val_loss: 1.0138 - val_accuracy: 0.6401\n",
       "Model performance has not reached pruning threshold for 3 epoch(s)\n",
       "Epoch 4/1000\n",
-      "157/157 [==============================] - 55s 350ms/step - loss: 1.1497 - accuracy: 0.5736 - val_loss: 0.9907 - val_accuracy: 0.6472\n",
+      "157/157 [==============================] - 55s 348ms/step - loss: 0.8670 - accuracy: 0.6950 - val_loss: 0.8634 - val_accuracy: 0.6979\n",
       "Model performance has not reached pruning threshold for 4 epoch(s)\n",
       "Epoch 5/1000\n",
-      "157/157 [==============================] - 55s 350ms/step - loss: 0.8669 - accuracy: 0.6986 - val_loss: 0.8482 - val_accuracy: 0.7092\n",
-      "Model performance has not reached pruning threshold for 5 epoch(s)\n",
+      "157/157 [==============================] - 55s 350ms/step - loss: 0.6957 - accuracy: 0.7677 - val_loss: 0.7053 - val_accuracy: 0.7692\n",
+      "Model performance reached 0.77, sparsifying to 45\n",
       "Epoch 6/1000\n",
-      "157/157 [==============================] - 55s 347ms/step - loss: 0.6906 - accuracy: 0.7656 - val_loss: 0.7413 - val_accuracy: 0.7540\n",
-      "Model performance reached 0.75, sparsifying to 45\n",
+      "157/157 [==============================] - 55s 353ms/step - loss: 0.5593 - accuracy: 0.8130 - val_loss: 0.6869 - val_accuracy: 0.7875\n",
+      "Model performance reached 0.79, sparsifying to 50\n",
       "Epoch 7/1000\n",
-      "157/157 [==============================] - 54s 346ms/step - loss: 0.5754 - accuracy: 0.8061 - val_loss: 0.7293 - val_accuracy: 0.7607\n",
-      "Model performance reached 0.76, sparsifying to 50\n",
+      "157/157 [==============================] - 55s 349ms/step - loss: 0.4488 - accuracy: 0.8543 - val_loss: 0.6594 - val_accuracy: 0.7963\n",
+      "Model performance reached 0.8, sparsifying to 55\n",
       "Epoch 8/1000\n",
-      "157/157 [==============================] - 55s 353ms/step - loss: 0.4683 - accuracy: 0.8429 - val_loss: 0.7536 - val_accuracy: 0.7714\n",
-      "Model performance reached 0.77, sparsifying to 55\n",
+      "157/157 [==============================] - 55s 350ms/step - loss: 0.3926 - accuracy: 0.8716 - val_loss: 0.6386 - val_accuracy: 0.7992\n",
+      "Model performance reached 0.8, sparsifying to 60\n",
       "Epoch 9/1000\n",
-      "157/157 [==============================] - 54s 344ms/step - loss: 0.4016 - accuracy: 0.8687 - val_loss: 0.7127 - val_accuracy: 0.7868\n",
-      "Model performance reached 0.79, sparsifying to 60\n",
+      "157/157 [==============================] - 55s 350ms/step - loss: 0.3177 - accuracy: 0.8974 - val_loss: 0.6563 - val_accuracy: 0.8114\n",
+      "Model performance reached 0.81, sparsifying to 65\n",
       "Epoch 10/1000\n",
-      "157/157 [==============================] - 54s 344ms/step - loss: 0.3283 - accuracy: 0.8929 - val_loss: 0.7053 - val_accuracy: 0.7910\n",
-      "Model performance reached 0.79, sparsifying to 65\n",
+      "157/157 [==============================] - 55s 349ms/step - loss: 0.2807 - accuracy: 0.9116 - val_loss: 0.7512 - val_accuracy: 0.7969\n",
+      "Model performance reached 0.8, sparsifying to 70\n",
       "Epoch 11/1000\n",
-      "157/157 [==============================] - 54s 345ms/step - loss: 0.2768 - accuracy: 0.9105 - val_loss: 0.7038 - val_accuracy: 0.7908\n",
-      "Model performance reached 0.79, sparsifying to 70\n",
-      "Epoch 12/1000\n",
-      "157/157 [==============================] - 54s 345ms/step - loss: 0.2451 - accuracy: 0.9213 - val_loss: 0.7397 - val_accuracy: 0.8012\n",
+      "157/157 [==============================] - 55s 349ms/step - loss: 0.2513 - accuracy: 0.9214 - val_loss: 0.7349 - val_accuracy: 0.7974\n",
       "Model performance reached 0.8, sparsifying to 75\n",
+      "Epoch 12/1000\n",
+      "157/157 [==============================] - 55s 350ms/step - loss: 0.2071 - accuracy: 0.9358 - val_loss: 0.7966 - val_accuracy: 0.8060\n",
+      "Model performance reached 0.81, sparsifying to 80\n",
       "Epoch 13/1000\n",
-      "157/157 [==============================] - 55s 352ms/step - loss: 0.2157 - accuracy: 0.9304 - val_loss: 0.7951 - val_accuracy: 0.7987\n",
-      "Model performance reached 0.8, sparsifying to 80\n",
+      "157/157 [==============================] - 55s 348ms/step - loss: 0.1849 - accuracy: 0.9434 - val_loss: 0.7987 - val_accuracy: 0.8061\n",
+      "Model performance reached 0.81, sparsifying to 85\n",
       "Epoch 14/1000\n",
-      "157/157 [==============================] - 54s 346ms/step - loss: 0.1795 - accuracy: 0.9434 - val_loss: 0.8168 - val_accuracy: 0.7990\n",
-      "Model performance reached 0.8, sparsifying to 85\n",
+      "157/157 [==============================] - 55s 352ms/step - loss: 0.1623 - accuracy: 0.9499 - val_loss: 0.7436 - val_accuracy: 0.8087\n",
+      "Model performance reached 0.81, sparsifying to 90\n",
       "Epoch 15/1000\n",
-      "157/157 [==============================] - 54s 345ms/step - loss: 0.1603 - accuracy: 0.9497 - val_loss: 0.8177 - val_accuracy: 0.7999\n",
-      "Model performance reached 0.8, sparsifying to 90\n",
-      "Epoch 16/1000\n",
-      "157/157 [==============================] - 55s 348ms/step - loss: 0.1526 - accuracy: 0.9527 - val_loss: 0.8382 - val_accuracy: 0.8005\n",
+      "157/157 [==============================] - 55s 350ms/step - loss: 0.1382 - accuracy: 0.9576 - val_loss: 0.8945 - val_accuracy: 0.8019\n",
       "Model performance reached 0.8, sparsifying to 95\n",
-      "Epoch 17/1000\n",
-      "157/157 [==============================] - 54s 344ms/step - loss: 0.1510 - accuracy: 0.9543 - val_loss: 0.8519 - val_accuracy: 0.7999\n",
+      "Epoch 16/1000\n",
+      "157/157 [==============================] - 56s 360ms/step - loss: 0.1340 - accuracy: 0.9601 - val_loss: 0.7836 - val_accuracy: 0.8114\n",
       "Model cannot be sparsified further due to max sparsification parameter\n",
-      "Epoch 18/1000\n",
-      "157/157 [==============================] - 54s 344ms/step - loss: 0.1253 - accuracy: 0.9611 - val_loss: 0.8789 - val_accuracy: 0.8012\n",
+      "Epoch 17/1000\n",
+      "157/157 [==============================] - 55s 353ms/step - loss: 0.1192 - accuracy: 0.9638 - val_loss: 0.9609 - val_accuracy: 0.7810\n",
       "Early stopping performance has not met threshold for 1 epochs\n",
-      "Epoch 19/1000\n",
-      "157/157 [==============================] - 54s 344ms/step - loss: 0.1151 - accuracy: 0.9648 - val_loss: 0.8752 - val_accuracy: 0.7979\n",
+      "Epoch 18/1000\n",
+      "157/157 [==============================] - 55s 350ms/step - loss: 0.1572 - accuracy: 0.9530 - val_loss: 0.8514 - val_accuracy: 0.8007\n",
       "Early stopping performance has not met threshold for 2 epochs\n",
-      "Epoch 20/1000\n",
-      "157/157 [==============================] - 54s 344ms/step - loss: 0.1086 - accuracy: 0.9667 - val_loss: 0.8876 - val_accuracy: 0.7943\n",
+      "Epoch 19/1000\n",
+      "157/157 [==============================] - 55s 349ms/step - loss: 0.1146 - accuracy: 0.9662 - val_loss: 0.8418 - val_accuracy: 0.8079\n",
       "Early stopping performance has not met threshold for 3 epochs\n",
-      "Epoch 21/1000\n",
-      "157/157 [==============================] - 54s 344ms/step - loss: 0.1152 - accuracy: 0.9658 - val_loss: 0.8994 - val_accuracy: 0.8010\n",
+      "Epoch 20/1000\n",
+      "157/157 [==============================] - 55s 350ms/step - loss: 0.0902 - accuracy: 0.9732 - val_loss: 0.8649 - val_accuracy: 0.8189\n",
       "Early stopping performance has not met threshold for 4 epochs\n",
-      "Epoch 22/1000\n",
-      "157/157 [==============================] - 54s 344ms/step - loss: 0.0819 - accuracy: 0.9745 - val_loss: 0.9228 - val_accuracy: 0.8080\n",
+      "Epoch 21/1000\n",
+      "157/157 [==============================] - 55s 350ms/step - loss: 0.0859 - accuracy: 0.9748 - val_loss: 0.9017 - val_accuracy: 0.8093\n",
       "Early stopping performance has not met threshold for 5 epochs\n",
       "Model performance has not met early stopping criteria. Stopping training\n"
      ]
@@ -291,7 +315,7 @@
     {
      "data": {
       "text/plain": [
-       "<keras.callbacks.History at 0x17a84b3a0>"
+       "<keras.callbacks.History at 0x339e26430>"
       ]
      },
      "execution_count": 5,
@@ -302,9 +326,9 @@
    "source": [
     "# Create the sparsification callback object\n",
     "callback = mann.utils.ActiveSparsification(\n",
-    "    0.75,\n",
-    "    starting_sparsification = 40,\n",
-    "    sparsification_rate = 5\n",
+    "    performance_cutoff = 0.75,    # The accuracy score the model needs to achieve\n",
+    "    starting_sparsification = 40, # Starting sparsification\n",
+    "    sparsification_rate = 5       # Sparsification increase every time the model achieves performance cutoff\n",
     ")\n",
     "\n",
     "# Fit the model\n",
@@ -316,6 +340,15 @@
     "    validation_split = 0.2,\n",
     "    batch_size = 256\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Convert the model back to remove masking layers\n",
+    "\n",
+    "In the following cell, we remove the layer masks created for training, while completely preserving performance."
    ]
   },
   {
@@ -359,15 +392,29 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Report accuracy and save model"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2022-03-03 11:04:54.104795: I tensorflow/core/grappler/optimizers/custom_graph_optimizer_registry.cc:112] Plugin optimizer for device_type GPU is enabled.\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model Accuracy: 0.7962\n"
+      "Model Accuracy: 0.8001\n"
      ]
     }
    ],
