--- a/NetworksAsLayers.ipynb
+++ b/NetworksAsLayers.ipynb
@@ -16,7 +16,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "(x_train, y_train), (x_test, y_test) = tf.keras.datasets.fashion_mnist.load_data()"
+    "(x_train, y_train), (x_test, y_test) = tf.keras.datasets.fashion_mnist.load_data()\n",
+    "x_train = tf.image.grayscale_to_rgb(tf.Variable(x_train.reshape(-1, 28, 28, 1)))\n",
+    "x_test = tf.image.grayscale_to_rgb(tf.Variable(x_test.reshape(-1, 28, 28, 1)))"
    ]
   },
   {
@@ -33,16 +35,16 @@
     "preprocess_model.add(tf.keras.layers.RandomTranslation(0.1, 0.1))\n",
     "\n",
     "true_model = tf.keras.models.Sequential()\n",
-    "true_model.add(mann.layers.MaskedConv2D(16, 3, padding = 'same', input_shape = (40, 40, 3)))\n",
-    "true_model.add(mann.layers.MaskedConv2D(16, 3, padding = 'same'))\n",
+    "true_model.add(mann.layers.MaskedConv2D(16, padding = 'same', input_shape = (40, 40, 3)))\n",
+    "true_model.add(mann.layers.MaskedConv2D(16, padding = 'same'))\n",
     "true_model.add(tf.keras.layers.MaxPool2D())\n",
     "true_model.add(tf.keras.layers.Dropout(0.2))\n",
-    "true_model.add(mann.layers.MaskedConv2D(32, 3, padding = 'same', activation = 'relu'))\n",
-    "true_model.add(mann.layers.MaskedConv2D(32, 3, padding = 'same', activation = 'relu'))\n",
+    "true_model.add(mann.layers.MaskedConv2D(32, padding = 'same', activation = 'relu'))\n",
+    "true_model.add(mann.layers.MaskedConv2D(32, padding = 'same', activation = 'relu'))\n",
     "true_model.add(tf.keras.layers.MaxPool2D())\n",
     "true_model.add(tf.keras.layers.Dropout(0.2))\n",
-    "true_model.add(mann.layers.MaskedConv2D(64, 3, padding = 'same', activation = 'relu'))\n",
-    "true_model.add(mann.layers.MaskedConv2D(64, 3, padding = 'same', activation = 'relu'))\n",
+    "true_model.add(mann.layers.MaskedConv2D(64, padding = 'same', activation = 'relu'))\n",
+    "true_model.add(mann.layers.MaskedConv2D(64, padding = 'same', activation = 'relu'))\n",
     "true_model.add(tf.keras.layers.MaxPool2D())\n",
     "true_model.add(tf.keras.layers.Dropout(0.2))\n",
     "true_model.add(tf.keras.layers.Flatten())\n",
@@ -50,9 +52,13 @@
     "true_model.add(mann.layers.MaskedDense(256, activation = 'relu'))\n",
     "true_model.add(mann.layers.MaskedDense(10, activation = 'softmax'))\n",
     "\n",
-    "training_model = tf.keras.models.Sequential()\n",
-    "training_model.add(preprocess_model)\n",
-    "training_model.add(true_model)\n",
+    "training_input = tf.keras.layers.Input((None, None, 3))\n",
+    "training_x = preprocess_model(training_input)\n",
+    "training_output = true_model(training_x)\n",
+    "training_model = tf.keras.models.Model(\n",
+    "    training_input,\n",
+    "    training_output\n",
+    ")\n",
     "\n",
     "training_model.compile(\n",
     "    loss = 'sparse_categorical_crossentropy',\n",
@@ -81,13 +87,6 @@
     "    callbacks = [callback]\n",
     ")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
