--- a/NetworksAsLayers.ipynb
+++ b/NetworksAsLayers.ipynb
@@ -83,6 +83,7 @@
     "    x_train,\n",
     "    y_train,\n",
     "    epochs = 200,\n",
+    "    batch_size = 512,\n",
     "    validation_split = 0.2,\n",
     "    callbacks = [callback]\n",
     ")"
