--- a/NetworksAsLayers.ipynb
+++ b/NetworksAsLayers.ipynb
@@ -30,8 +30,8 @@
     "preprocess_model = tf.keras.models.Sequential()\n",
     "preprocess_model.add(tf.keras.layers.Rescaling(1./255))\n",
     "preprocess_model.add(tf.keras.layers.Resizing(40, 40, input_shape = (None, None, 3)))\n",
-    "preprocess_model.add(tf.keras.layers.RandomFlip())\n",
-    "preprocess_model.add(tf.keras.layers.RandomRotation(0.2))\n",
+    "preprocess_model.add(tf.keras.layers.RandomFlip('horizontal'))\n",
+    "preprocess_model.add(tf.keras.layers.RandomRotation(0.1))\n",
     "preprocess_model.add(tf.keras.layers.RandomTranslation(0.1, 0.1))\n",
     "\n",
     "true_model = tf.keras.models.Sequential()\n",
