--- a/NetworksAsLayers.ipynb
+++ b/NetworksAsLayers.ipynb
@@ -7,7 +7,9 @@
    "outputs": [],
    "source": [
     "import tensorflow as tf\n",
-    "import mann"
+    "import mann\n",
+    "\n",
+    "from sklearn.metrics import confusion_matrix, classification_report"
    ]
   },
   {
@@ -87,6 +89,26 @@
     "    validation_split = 0.2,\n",
     "    callbacks = [callback]\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = mann.utils.remove_layer_masks(training_model)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "preds = model.predict(x_test).argmax(axis = 1)\n",
+    "print(confusion_matrix(y_test, preds))\n",
+    "print(classification_report(y_test, preds))"
    ]
   }
  ],
