--- a/NetworksAsLayers.ipynb
+++ b/NetworksAsLayers.ipynb
@@ -1,11 +1,22 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Using Models as Layers in Another Model\n",
+    "\n",
+    "In this notebook, we show how you can use Keras models as Layers within a larger model and still perform pruning on that model."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Import required packages\n",
+    "\n",
     "import tensorflow as tf\n",
     "import mann\n",
     "\n",
@@ -18,9 +29,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Load the data\n",
     "(x_train, y_train), (x_test, y_test) = tf.keras.datasets.fashion_mnist.load_data()\n",
+    "\n",
+    "# Convert images from grayscale to RGB\n",
     "x_train = tf.image.grayscale_to_rgb(tf.Variable(x_train.reshape(-1, 28, 28, 1)))\n",
     "x_test = tf.image.grayscale_to_rgb(tf.Variable(x_test.reshape(-1, 28, 28, 1)))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Model Creation\n",
+    "\n",
+    "In the following cells, we create two models and put them together to create a larger model. The first model, called the `preprocess_model`, takes in images, divides the pixel values by 255 to ensure all values are between 0 and 1, resized the image to a height and width of 40 pixels. It then performs training data augmentation by randomly flips some images across the y-axis, randomly rotates images, and randomly translates the images.\n",
+    "\n",
+    "The second model, called the `true_model`, contains the logic for performing prediction on images. It contains blocks of convolutional layers followed by max pooling and dropout layers. The output of these blocks is flattened and passed through fully-connected layers to output predicted class probabilities.\n",
+    "\n",
+    "These two models are combined in the `training_model` to be trained."
    ]
   },
   {
@@ -72,13 +99,23 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Model Training\n",
+    "\n",
+    "In this cell, we create the `ActiveSparsification` object to continually sparsify the model as it trains, and train the model."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "callback = mann.utils.ActiveSparsification(\n",
-    "    0.85\n",
+    "    0.85,\n",
+    "    sparsification_rate = 5\n",
     ")\n",
     "\n",
     "training_model.fit(\n",
@@ -92,12 +129,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "model = mann.utils.remove_layer_masks(training_model)"
+    "## Convert the model to not have masking layers\n",
+    "\n",
+    "In the following cell, we configure the model to remove masking layers and replace them with non-masking native TensorFlow layers. We then perform prediction on the resulting model and present the results."
    ]
   },
   {
@@ -106,9 +143,28 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "model = mann.utils.remove_layer_masks(training_model)\n",
     "preds = model.predict(x_test).argmax(axis = 1)\n",
     "print(confusion_matrix(y_test, preds))\n",
     "print(classification_report(y_test, preds))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Save only the model that performs prediction\n",
+    "\n",
+    "Lastly, save only the part of the model that performs prediction"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model.layers[2].save('ModelLayer.h5')"
    ]
   }
  ],
