updating notebooks to work with beyondml
Signed-off-by: Jacob Renn <77127228+jacobrenn@users.noreply.github.com>

--- a/CIFAR10_air.ipynb
+++ b/CIFAR10_air.ipynb
@@ -16,7 +16,7 @@
    "outputs": [],
    "source": [
     "# First, install dependencies\n",
-    "! pip install mann\n",
+    "! pip install beyondml\n",
     "! pip install aisquared"
    ]
   },
@@ -36,7 +36,7 @@
     "# Now that the required packages have been installed, let's import all the required packages\n",
     "import tensorflow as tf\n",
     "import aisquared\n",
-    "import mann"
+    "import beyondml.tflow as mann"
    ]
   },
   {
@@ -263,7 +263,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.10"
+   "version": "3.10.8 | packaged by conda-forge | (main, Nov 22 2022, 08:25:29) [Clang 14.0.6 ]"
   },
   "orig_nbformat": 4
  },
