--- a/CV and NLP.ipynb
+++ b/CV and NLP.ipynb
@@ -22,7 +22,7 @@
     "import tensorflow as tf\n",
     "import pandas as pd\n",
     "import numpy as np\n",
-    "import mann"
+    "import beyodnml.tflow as mann"
    ]
   },
   {
@@ -319,11 +319,8 @@
   }
  ],
  "metadata": {
-  "interpreter": {
-   "hash": "51acfa6005ffec5e74e71d844e0daa05d24ac78244a0bb1b7874b497027552e7"
-  },
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -337,7 +334,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.9"
+   "version": "3.10.8 | packaged by conda-forge | (main, Nov 22 2022, 08:25:29) [Clang 14.0.6 ]"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "0671325c08d22fc44ce2e58aedbf8efae69ce5eb9c1911bbe321ecb24080d883"
+   }
   }
  },
  "nbformat": 4,
