--- a/ConvolutionalAndFullyConnected.ipynb
+++ b/ConvolutionalAndFullyConnected.ipynb
@@ -21,7 +21,7 @@
     "from sklearn.preprocessing import MinMaxScaler\n",
     "import tensorflow as tf\n",
     "import numpy as np\n",
-    "import mann"
+    "import beyondml.tflow as mann"
    ]
   },
   {
@@ -254,7 +254,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -268,7 +268,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.9"
+   "version": "3.10.8 | packaged by conda-forge | (main, Nov 22 2022, 08:25:29) [Clang 14.0.6 ]"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "0671325c08d22fc44ce2e58aedbf8efae69ce5eb9c1911bbe321ecb24080d883"
+   }
   }
  },
  "nbformat": 4,
