--- a/NetworksAsLayers.ipynb
+++ b/NetworksAsLayers.ipynb
@@ -18,7 +18,7 @@
     "# Import required packages\n",
     "\n",
     "import tensorflow as tf\n",
-    "import mann\n",
+    "import beyondml.tflow as mann\n",
     "\n",
     "from sklearn.metrics import confusion_matrix, classification_report"
    ]
@@ -187,7 +187,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.10"
+   "version": "3.10.8 | packaged by conda-forge | (main, Nov 22 2022, 08:25:29) [Clang 14.0.6 ]"
   },
   "orig_nbformat": 4
  },
