--- a/UseExistingModel.ipynb
+++ b/UseExistingModel.ipynb
@@ -17,7 +17,7 @@
    "source": [
     "# Load the MANN package and TensorFlow\n",
     "import tensorflow as tf\n",
-    "import mann"
+    "import beyondml.tflow as mann"
    ]
   },
   {
@@ -449,7 +449,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.10"
+   "version": "3.10.8 | packaged by conda-forge | (main, Nov 22 2022, 08:25:29) [Clang 14.0.6 ]"
   },
   "orig_nbformat": 4
  },
