--- a/UseExistingModel.ipynb
+++ b/UseExistingModel.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,29 +22,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2022-03-03 10:45:34.442895: I tensorflow/core/common_runtime/pluggable_device/pluggable_device_factory.cc:305] Could not identify NUMA node of platform GPU ID 0, defaulting to 0. Your kernel may not have been built with NUMA support.\n",
-      "2022-03-03 10:45:34.442998: I tensorflow/core/common_runtime/pluggable_device/pluggable_device_factory.cc:271] Created TensorFlow device (/job:localhost/replica:0/task:0/device:GPU:0 with 0 MB memory) -> physical PluggableDevice (device: 0, name: METAL, pci bus id: <undefined>)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Metal device set to: Apple M1\n",
-      "\n",
-      "systemMemory: 16.00 GB\n",
-      "maxCacheSize: 5.33 GB\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Load the data\n",
     "(x_train, y_train), (x_test, y_test) = tf.keras.datasets.cifar10.load_data()\n",
@@ -70,36 +50,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Model: \"sequential\"\n",
-      "_________________________________________________________________\n",
-      "Layer (type)                 Output Shape              Param #   \n",
-      "=================================================================\n",
-      "vgg16 (Functional)           (None, 1, 1, 512)         14714688  \n",
-      "_________________________________________________________________\n",
-      "flatten (Flatten)            (None, 512)               0         \n",
-      "_________________________________________________________________\n",
-      "dense (Dense)                (None, 512)               262656    \n",
-      "_________________________________________________________________\n",
-      "dense_1 (Dense)              (None, 512)               262656    \n",
-      "_________________________________________________________________\n",
-      "dense_2 (Dense)              (None, 512)               262656    \n",
-      "_________________________________________________________________\n",
-      "dense_3 (Dense)              (None, 10)                5130      \n",
-      "=================================================================\n",
-      "Total params: 15,507,786\n",
-      "Trainable params: 15,507,786\n",
-      "Non-trainable params: 0\n",
-      "_________________________________________________________________\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Build the model using VGG16 and a few layers on top of it\n",
     "model = tf.keras.models.Sequential()\n",
@@ -132,36 +85,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Model: \"sequential\"\n",
-      "_________________________________________________________________\n",
-      "Layer (type)                 Output Shape              Param #   \n",
-      "=================================================================\n",
-      "vgg16 (Functional)           (None, 1, 1, 512)         29429376  \n",
-      "_________________________________________________________________\n",
-      "flatten (Flatten)            (None, 512)               0         \n",
-      "_________________________________________________________________\n",
-      "masked_dense (MaskedDense)   (None, 512)               525312    \n",
-      "_________________________________________________________________\n",
-      "masked_dense_1 (MaskedDense) (None, 512)               525312    \n",
-      "_________________________________________________________________\n",
-      "masked_dense_2 (MaskedDense) (None, 512)               525312    \n",
-      "_________________________________________________________________\n",
-      "masked_dense_3 (MaskedDense) (None, 10)                10260     \n",
-      "=================================================================\n",
-      "Total params: 31,015,572\n",
-      "Trainable params: 15,507,786\n",
-      "Non-trainable params: 15,507,786\n",
-      "_________________________________________________________________\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Use the add_layer_masks function to add masking layers to the model\n",
     "converted_model = mann.utils.add_layer_masks(model)\n",
@@ -202,127 +128,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2022-03-03 10:45:35.917442: I tensorflow/compiler/mlir/mlir_graph_optimization_pass.cc:185] None of the MLIR Optimization Passes are enabled (registered 2)\n",
-      "2022-03-03 10:45:35.918470: W tensorflow/core/platform/profile_utils/cpu_utils.cc:128] Failed to get CPU frequency: 0 Hz\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch 1/1000\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2022-03-03 10:45:36.127297: I tensorflow/core/grappler/optimizers/custom_graph_optimizer_registry.cc:112] Plugin optimizer for device_type GPU is enabled.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "  6/157 [>.............................] - ETA: 49s - loss: 2.4471 - accuracy: 0.0944WARNING:tensorflow:Callback method `on_train_batch_end` is slow compared to the batch time (batch time: 0.0993s vs `on_train_batch_end` time: 0.2171s). Check your callbacks.\n",
-      "157/157 [==============================] - ETA: 0s - loss: 1.9748 - accuracy: 0.2022"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2022-03-03 10:46:28.293310: I tensorflow/core/grappler/optimizers/custom_graph_optimizer_registry.cc:112] Plugin optimizer for device_type GPU is enabled.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "157/157 [==============================] - 56s 354ms/step - loss: 1.9748 - accuracy: 0.2022 - val_loss: 1.7803 - val_accuracy: 0.2515\n",
-      "Performance measure set to val_accuracy\n",
-      "Model performance has not reached pruning threshold for 1 epoch(s)\n",
-      "Epoch 2/1000\n",
-      "157/157 [==============================] - 55s 349ms/step - loss: 1.5569 - accuracy: 0.3574 - val_loss: 1.4051 - val_accuracy: 0.4592\n",
-      "Model performance has not reached pruning threshold for 2 epoch(s)\n",
-      "Epoch 3/1000\n",
-      "157/157 [==============================] - 55s 348ms/step - loss: 1.1886 - accuracy: 0.5540 - val_loss: 1.0138 - val_accuracy: 0.6401\n",
-      "Model performance has not reached pruning threshold for 3 epoch(s)\n",
-      "Epoch 4/1000\n",
-      "157/157 [==============================] - 55s 348ms/step - loss: 0.8670 - accuracy: 0.6950 - val_loss: 0.8634 - val_accuracy: 0.6979\n",
-      "Model performance has not reached pruning threshold for 4 epoch(s)\n",
-      "Epoch 5/1000\n",
-      "157/157 [==============================] - 55s 350ms/step - loss: 0.6957 - accuracy: 0.7677 - val_loss: 0.7053 - val_accuracy: 0.7692\n",
-      "Model performance reached 0.77, sparsifying to 45\n",
-      "Epoch 6/1000\n",
-      "157/157 [==============================] - 55s 353ms/step - loss: 0.5593 - accuracy: 0.8130 - val_loss: 0.6869 - val_accuracy: 0.7875\n",
-      "Model performance reached 0.79, sparsifying to 50\n",
-      "Epoch 7/1000\n",
-      "157/157 [==============================] - 55s 349ms/step - loss: 0.4488 - accuracy: 0.8543 - val_loss: 0.6594 - val_accuracy: 0.7963\n",
-      "Model performance reached 0.8, sparsifying to 55\n",
-      "Epoch 8/1000\n",
-      "157/157 [==============================] - 55s 350ms/step - loss: 0.3926 - accuracy: 0.8716 - val_loss: 0.6386 - val_accuracy: 0.7992\n",
-      "Model performance reached 0.8, sparsifying to 60\n",
-      "Epoch 9/1000\n",
-      "157/157 [==============================] - 55s 350ms/step - loss: 0.3177 - accuracy: 0.8974 - val_loss: 0.6563 - val_accuracy: 0.8114\n",
-      "Model performance reached 0.81, sparsifying to 65\n",
-      "Epoch 10/1000\n",
-      "157/157 [==============================] - 55s 349ms/step - loss: 0.2807 - accuracy: 0.9116 - val_loss: 0.7512 - val_accuracy: 0.7969\n",
-      "Model performance reached 0.8, sparsifying to 70\n",
-      "Epoch 11/1000\n",
-      "157/157 [==============================] - 55s 349ms/step - loss: 0.2513 - accuracy: 0.9214 - val_loss: 0.7349 - val_accuracy: 0.7974\n",
-      "Model performance reached 0.8, sparsifying to 75\n",
-      "Epoch 12/1000\n",
-      "157/157 [==============================] - 55s 350ms/step - loss: 0.2071 - accuracy: 0.9358 - val_loss: 0.7966 - val_accuracy: 0.8060\n",
-      "Model performance reached 0.81, sparsifying to 80\n",
-      "Epoch 13/1000\n",
-      "157/157 [==============================] - 55s 348ms/step - loss: 0.1849 - accuracy: 0.9434 - val_loss: 0.7987 - val_accuracy: 0.8061\n",
-      "Model performance reached 0.81, sparsifying to 85\n",
-      "Epoch 14/1000\n",
-      "157/157 [==============================] - 55s 352ms/step - loss: 0.1623 - accuracy: 0.9499 - val_loss: 0.7436 - val_accuracy: 0.8087\n",
-      "Model performance reached 0.81, sparsifying to 90\n",
-      "Epoch 15/1000\n",
-      "157/157 [==============================] - 55s 350ms/step - loss: 0.1382 - accuracy: 0.9576 - val_loss: 0.8945 - val_accuracy: 0.8019\n",
-      "Model performance reached 0.8, sparsifying to 95\n",
-      "Epoch 16/1000\n",
-      "157/157 [==============================] - 56s 360ms/step - loss: 0.1340 - accuracy: 0.9601 - val_loss: 0.7836 - val_accuracy: 0.8114\n",
-      "Model cannot be sparsified further due to max sparsification parameter\n",
-      "Epoch 17/1000\n",
-      "157/157 [==============================] - 55s 353ms/step - loss: 0.1192 - accuracy: 0.9638 - val_loss: 0.9609 - val_accuracy: 0.7810\n",
-      "Early stopping performance has not met threshold for 1 epochs\n",
-      "Epoch 18/1000\n",
-      "157/157 [==============================] - 55s 350ms/step - loss: 0.1572 - accuracy: 0.9530 - val_loss: 0.8514 - val_accuracy: 0.8007\n",
-      "Early stopping performance has not met threshold for 2 epochs\n",
-      "Epoch 19/1000\n",
-      "157/157 [==============================] - 55s 349ms/step - loss: 0.1146 - accuracy: 0.9662 - val_loss: 0.8418 - val_accuracy: 0.8079\n",
-      "Early stopping performance has not met threshold for 3 epochs\n",
-      "Epoch 20/1000\n",
-      "157/157 [==============================] - 55s 350ms/step - loss: 0.0902 - accuracy: 0.9732 - val_loss: 0.8649 - val_accuracy: 0.8189\n",
-      "Early stopping performance has not met threshold for 4 epochs\n",
-      "Epoch 21/1000\n",
-      "157/157 [==============================] - 55s 350ms/step - loss: 0.0859 - accuracy: 0.9748 - val_loss: 0.9017 - val_accuracy: 0.8093\n",
-      "Early stopping performance has not met threshold for 5 epochs\n",
-      "Model performance has not met early stopping criteria. Stopping training\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<keras.callbacks.History at 0x339e26430>"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Create the sparsification callback object\n",
     "callback = mann.utils.ActiveSparsification(\n",
@@ -353,36 +161,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Model: \"sequential\"\n",
-      "_________________________________________________________________\n",
-      "Layer (type)                 Output Shape              Param #   \n",
-      "=================================================================\n",
-      "vgg16 (Functional)           (None, 1, 1, 512)         14714688  \n",
-      "_________________________________________________________________\n",
-      "flatten (Flatten)            (None, 512)               0         \n",
-      "_________________________________________________________________\n",
-      "dense (Dense)                (None, 512)               262656    \n",
-      "_________________________________________________________________\n",
-      "dense_1 (Dense)              (None, 512)               262656    \n",
-      "_________________________________________________________________\n",
-      "dense_2 (Dense)              (None, 512)               262656    \n",
-      "_________________________________________________________________\n",
-      "dense_3 (Dense)              (None, 10)                5130      \n",
-      "=================================================================\n",
-      "Total params: 15,507,786\n",
-      "Trainable params: 0\n",
-      "Non-trainable params: 15,507,786\n",
-      "_________________________________________________________________\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Convert the model back\n",
     "model = mann.utils.remove_layer_masks(model)\n",
@@ -400,24 +181,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2022-03-03 11:04:54.104795: I tensorflow/core/grappler/optimizers/custom_graph_optimizer_registry.cc:112] Plugin optimizer for device_type GPU is enabled.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Model Accuracy: 0.8001\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Get the predictions on test data\n",
     "preds = model.predict(x_test).argmax(axis = 1)\n",
@@ -449,7 +215,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8 | packaged by conda-forge | (main, Nov 22 2022, 08:25:29) [Clang 14.0.6 ]"
+   "version": "3.10.8"
   },
   "orig_nbformat": 4
  },
